[package]
authors = ["David Barsky <me@davidbarsky.com>", "Nathan Whitaker", "Austin Schey <aschey13@gmail.com>"]
description = "A Tracing Layer which prints a tree of spans and events."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tracing-tree2"
readme = "README.md"
repository = "https://github.com/aschey/tracing-tree"
version = "0.3.0"

[dependencies]
atty = "0.2"
nu-ansi-term = "0.46.0"
tracing-core = "0.1"
tracing-log = {version = "0.1", optional = true}
tracing-subscriber = {version = "0.3", default-features = false, features = ["registry", "fmt", "std"]}

[features]
default = ["tracing-log"]

[dev-dependencies]
assert_cmd = "1"
glob = "0.3"
log = "0.4"
tracing = "0.1"

[[test]]
harness = false
name = "ui"
